gcc/testsuite/gdc.test/compilable/imports/test9436node.d
module imports.test9436node;

import imports.test9436aggr;

template ForwardCtor()
{
}
