gcc/testsuite/gdc.test/fail_compilation/imports/fail1900b.d
module imports.fail1900b;
template Bar(short n) { enum Bar = n; }
